--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 
     <script src="app.js"></script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO7p-IAlijtisjjqbhH8-sNiEXwyaRkiU&map_ids=ce925358d600d3f&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key="API_KEY"&map_ids="MAP_ID"&callback=initMap">
     </script>
 </body>
 
 </html>
-
-<!-- ce925358d600d3f -->
-<!-- api key - AIzaSyDO7p-IAlijtisjjqbhH8-sNiEXwyaRkiU -->
